--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,9 @@
   </head>
 
   <body>
+    <% if current_user %>
+      <%=link_to "Logout", destroy_user_session_path %>
+    <%end%>
     <style type="">
       .alert-notice{
         background-color: green;
