--- a/app/views/posts/_posts.html.erb
+++ b/app/views/posts/_posts.html.erb
@@ -3,14 +3,12 @@
 <table>
   <tr>
     <th>Title</th>
-    <th>Text</th>
   </tr>
  
   <% @posts.each do |post| %>
     <tr>
-      <td><%= post.title %></td>
-      <td><%= post.description %></td>
-      <td><%= link_to 'Show', post_path(post) %></td>
+      <td><strong><%= link_to post.title, post_path(post) %> </strong> 
+       Created by <%=post.user.email%></td>
       <% if show_paths %>
       	<td><%= link_to 'Edit', edit_post_path(post) %></td>
       	<td><%= link_to 'Destroy', post_path(post),
