--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -1,3 +1,17 @@
 // Place all the styles related to the Posts controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.post-body{
+  font-size:32px;
+  padding-left: 20%;
+  margin-bottom: 10px;
+
+  .post-title {
+    font-weight: bold;
+  }
+
+  .row p {
+    margin: 0 0 0px;
+  }
+}
