--- a/app/views/posts/_posts.html.erb
+++ b/app/views/posts/_posts.html.erb
@@ -1,20 +1,24 @@
+<div style = "text-align: center;">
 <h1>Listing Post</h1>
- 
-<table>
-  <tr>
-    <th>Title</th>
-  </tr>
- 
-  <% @posts.each do |post| %>
-    <tr>
-      <td><strong><%= link_to post.title, post_path(post) %> </strong> 
-       Created by <%=post.user.email%></td>
+</div>
+<% @posts.each do |post| %>
+  <div class = 'row post-body'>
+      <div class = 'row'>
+        <p>
+          <span class= 'post-title'><%= link_to post.title, post_path(post) %> </span> 
+            <% if !show_paths %>
+              <span style="font-style:italic;font-size: 18px">Created by <%=post.user.email%></span>
+            <%end%>
+         </p>
+      </div>
       <% if show_paths %>
-      	<td><%= link_to 'Edit', edit_post_path(post) %></td>
-      	<td><%= link_to 'Destroy', post_path(post),
+      	<p style="font-size: 18px">
+          <%= link_to 'Edit', edit_post_path(post) %> |      	  
+          <%= link_to 'Destroy', post_path(post),
               method: :delete,
-              data: { confirm: 'Are you sure?' } %></td>
+              data: { confirm: 'Are you sure?' } %>
+        </p>
       <%end%>
-    </tr>
-  <% end %>
-</table>
+  </div>
+<% end %>
+
