Added style for comments

--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -15,3 +15,14 @@
     margin: 0 0 0px;
   }
 }
+
+.post-page {
+	.post-title {
+	   font-size:32px;
+	   font-weight:bold;
+	}
+
+	.post-description {
+	   font-size: 18px;
+	}
+}
