--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,15 +1,15 @@
 <%= form_for @post do |f| %>
-  <p>
+  <div class='form-group'>
     <%= f.label :title %><br>
-    <%= f.text_field :title %>
-  </p>
+    <%= f.text_field :title, class: 'form-control' %>
+  </div>
  
-  <p>
+  <div class='form-group'>
     <%= f.label :description %><br>
-    <%= f.text_area :description %>
-  </p>
+    <%= f.text_area :description, class: 'form-control' %>
+  </div>
  
-  <p>
-    <%= f.submit %>
-  </p>
+  <div class='actions'>
+    <%= f.submit class: 'btn btn-primary btn-success' %>
+  </div>
 <% end %>
