--- a/app/views/posts/_posts.html.erb
+++ b/app/views/posts/_posts.html.erb
@@ -13,8 +13,8 @@
       </div>
       <% if show_paths %>
       	<p style="font-size: 18px">
-          <%= link_to 'Edit', edit_post_path(post) %> |      	  
-          <%= link_to 'Destroy', post_path(post),
+          <%= link_to 'Edit', edit_post_path(post),  class: "btn btn-default btn-primary" %>    	  
+          <%= link_to 'Destroy', post_path(post), class: "btn btn-default btn-danger",
               method: :delete,
               data: { confirm: 'Are you sure?' } %>
         </p>
