--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,5 +1,9 @@
-<h1>Update Post</h1>
- 
-<%= render 'form' %>
- 
-<%= link_to 'Back', posts_path %>
+<div class= 'row'>
+	<h1>Update Post</h1>
+	 
+	<%= render 'form' %>
+
+	</br>
+	 
+	<%= link_to 'Back', posts_path, class: "btn btn-default" %>
+<div class= 'row'>
