--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,5 +1,8 @@
-<h1>New Post</h1>
- 
-<%= render 'form' %>
- 
-<%= link_to 'Back', posts_path %>
+<div class= 'row'>
+	<h1>New Post</h1>
+	 
+	<%= render 'form' %>
+	</br>
+	 
+	<%= link_to 'Back', posts_path , class: 'btn btn-primary' %>
+</div>
