Added Tag Functionality

--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -25,4 +25,10 @@
 	.post-description {
 	   font-size: 18px;
 	}
+
+  .tags{
+    padding: 10px;
+    background-color: lightcyan;
+    border-radius: 10px;
+  }
 }
