--- a/app/views/posts/_posts.html.erb
+++ b/app/views/posts/_posts.html.erb
@@ -1,22 +1,35 @@
+<div  class='all-posts col-md-8 col-md-offset-2'>
 <div style = "text-align: center;">
 <h1>Listing Post</h1>
 </div>
-<% @posts.each do |post| %>
-  <div class = 'post-body'>
-        <p>
-          <span class= 'post-title'><%= link_to post.title, post_path(post) %> </span> 
-            <% if !show_paths %>
-              <span style="font-style:italic;font-size: 18px">Created by <%=post.user.email%></span>
-            <%end%>
-         </p>
-      <% if show_paths %>
-      	<p style="font-size: 18px">
-          <%= link_to 'Edit', edit_post_path(post),  class: "btn btn-default btn-primary" %>    	  
-          <%= link_to 'Destroy', post_path(post), class: "btn btn-default btn-danger",
-              method: :delete,
-              data: { confirm: 'Are you sure?' } %>
-        </p>
-      <%end%>
-  </div>
-<% end %>
-
+    <% @posts.each do |post| %> 
+      <div class= 'post'>       
+        <div class='row post-body'>
+           <div class= 'post-title'><h2><%= link_to post.title, post_path(post) %></h2></div> 
+        </div>
+        <% if !show_paths %>
+          <div class='row post-author'>
+            --<span style="font-style:italic;font-size: 18px">Posted by <%=post.user.email%></span>
+          </div>
+        <%end%>
+        <% if show_paths %>
+          <div class='row post-author'>
+            <%= link_to 'Edit', edit_post_path(post),  class: "btn btn-default btn-primary" %>    	  
+            <%= link_to 'Destroy', post_path(post), class: "btn btn-default btn-danger",
+                method: :delete,
+                data: { confirm: 'Are you sure?' } %>
+          </div>
+        <%end%>
+        <div class='row post-desc'>
+          <p>
+             <%= post.description.first(350) %>...
+          </p>
+        </div>
+        <div class = 'post-info'>
+          <div class = 'post-create'> <p><%= post.created_at.strftime("%B, %Y")%></p></div>
+          <div class = 'post-url'> <%= link_to "Read More>>", post_path(post) %>  </div>
+        </div>
+      </div>
+      <hr>
+    <%end%>
+</div>
