Eager loaded users in posts

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -32,7 +32,7 @@
         </form>
     </div>
     <div class = 'comments'>
-      <% @post.comments.each do |comment| %>
+      <% post_comments.each do |comment| %>
         <div class="media">
           <a class="pull-left" href="#">
             <img class="media-object" src="http://placehold.it/64x64" alt="">
